--- a/src/assets/styles/chatbot/ChatMessage.css
+++ b/src/assets/styles/chatbot/ChatMessage.css
@@ -1,3 +1,21 @@
-div {
+.messages {
+    flex: 1;
+    overflow-y: auto;
+  }
     
-}
+  .message {
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    border-radius: 5px;
+  }
+  
+  .message.user {
+    background-color: #F5DEB3;
+    align-self: flex-end;
+  }
+  
+  .message.bot {
+    background-color: #FFA500;
+  }
+  
+  
