--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
+@font-face {
+  font-family: 'HSBombaram3.0_Regular';
+  src: url('./assets/fonts/HSBombaram3.0_Regular.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'HSBombaram3.0_Thin';
+  src: url('./assets/fonts/HSBombaram3.0_Thin.ttf') format('ttf');
+}
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
