--- a/src/assets/styles/chatbot/ChatWindow.css
+++ b/src/assets/styles/chatbot/ChatWindow.css
@@ -16,8 +16,8 @@ input {
 }
 
 button {
-    background-color: #8B4513;
-    color: white;
+    background-color: #FF994F;
+    color: black;
     border: none;
     padding: 0.5rem 1rem;
     cursor: pointer;
