--- a/src/assets/styles/chatbot/Sidebar.css
+++ b/src/assets/styles/chatbot/Sidebar.css
@@ -1,6 +1,8 @@
 aside {
-    background-color: #8B4513;
-    color: white;
-    padding: 1rem;
-    width: 250px;
-  }
+  background-color: #8B4513;
+  color: white;
+  padding: 1rem;
+  width: 250px;
+  height: 1080px;
+}
+
