--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  justify-content: center;
 }
   
 header {
@@ -12,6 +13,7 @@ header {
   justify-content: space-between;
   padding: 1rem;
 }
-  
+
+
 
   
