--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -7,13 +7,45 @@
 }
   
 header {
-  background-color: #8B4513;
-  color: white;
+  background-color: white;
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  margin: 20px 50px 20px 50px;
+  border-bottom: 1px solid black;
+}
+.logo {
+  width: 280px;
+  /* height: 50px; */
+  color: #8B4513;
+  font-size: 64px;
+  font-weight: 500;
 }
 
+header h1 {
+  font-size: 64px;
+  font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Regular', sans-serif;
+}
 
+header nav {
+  align-content: center;
+  font-size: 32px;
+  font-family: 'HSBombaram3.0_Regular', sans-serif;
+}
 
-  
+.sign_in, .sign_out {
+  width: 200px;
+  height: 70px;
+  border: 1px solid #8B4513;
+  border-radius: 50px;
+  margin: 0px 10px 0px 10px;
+  padding-bottom: 5px;
+  background-color: #8B4513;
+  color: white;
+}
+
+.sign_up, .my_page {
+  width: 200px;
+  height: 70px;
+  color: #8B4513;
+  margin: 0px 10px 0px 10px;
+}
