--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,21 @@
   src: url('./assets/fonts/HSBombaram3.0_Thin.ttf') format('ttf');
 }
 
+@font-face {
+  font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Thin';
+  src: url('./assets/fonts/HSBombaram3.0_세로쓰기전용_Vertical_Thin.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Regular';
+  src: url('./assets/fonts/HSBombaram3.0_세로쓰기전용_Vertical_Regular.ttf') format('ttf');
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
