--- a/src/assets/styles/chatbot/ChatBotPage.css
+++ b/src/assets/styles/chatbot/ChatBotPage.css
@@ -1,6 +1,10 @@
 .main-content {
   display: flex;
   flex: 1;
-  
+}
+
+.chatbot-contents {
+  display: flex;
+  margin: 30px 50px 0px 50px;
 }
   
