--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -5,14 +5,31 @@
   height: 100vh;
   justify-content: center;
 }
-  
+/* header */
 header {
   background-color: white;
   display: flex;
   justify-content: space-between;
-  margin: 20px 50px 0px 50px;
+  margin: 0px auto;
+  width: 100%;
+  min-width: 768px;
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    min-width: 100%;
+    padding: 0 50px;
+  }
+}
+
+.header-content{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
   border-bottom: 1px solid #775A45;
 }
+
 .logo {
   width: 280px;
   /* height: 50px; */
@@ -33,6 +50,9 @@ header nav {
 }
 
 .sign_in, .sign_out {
+  display: inline-block;
+  text-align: center;
+  align-content: center;
   width: 200px;
   height: 70px;
   border: 1px solid #775A45;
@@ -44,8 +64,91 @@ header nav {
 }
 
 .sign_up, .my_page {
+  display: inline-block;
+  text-align: center;
+  align-content: center;
   width: 200px;
   height: 70px;
   color: #775A45;
   margin: 0px 10px 0px 10px;
 }
+
+/* header/ */
+
+
+/* footer */
+footer {
+  background-color: #DEDEDE;
+  display: flex;
+  margin: 20px auto 0px auto;
+  width: 100%;
+  min-width: 768px;
+  box-sizing: border-box;
+  height: 220px;
+}
+
+@media screen and (min-width: 768px) {
+  footer {
+    min-width: 100%;
+    margin: 20px 0 0px 0px;
+    padding: 0 20px;
+  }
+}
+
+.footer-wrap{
+  width: 100%;
+  
+}
+
+.footer-detail-box{
+  font-family: 'HSBombaram3.0_Vertical_Thin', sans-serif;
+  display: flexbox;
+  justify-content: center;
+  padding: 0px 250px 0px 250px;
+
+}
+.first-detail{
+  width: 100%;
+  height: 70px;
+  border-bottom: 1px solid black;
+  align-content: center;
+  /* background-color: black; */
+}
+
+.first-detail span{
+  font-size: 15px;
+  margin-right: 20px;
+  font-weight: 600;
+}
+
+.second-detail{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 90px;
+  font-size: 24px;
+}
+.s-introduce{
+  height: 50px;
+  align-content: center;
+}
+
+.s-introduce span {
+  margin-right: 20px;
+  font-weight: 700;
+}
+
+.third-detail{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 30px;
+  font-size: 15px;
+}
+.third-detail span{
+  height: 30px;
+  font-weight: 600;
+}
+
+/* footer/ */
