--- a/src/assets/styles/homepage/homepage.css
+++ b/src/assets/styles/homepage/homepage.css
@@ -1,19 +1,25 @@
 /* styles.css */
-body, html {
+/* body, html {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow-x: visible;
     font-family: Arial, sans-serif;
-}
+} */
 
 .contents {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+    /* overflow: auto; */
     background-color: #8B4513;
     position: relative; /* 필수: 내부에 절대 위치 요소를 올바르게 배치하기 위함 */
+    z-index: 0;
+}
+
+.screen-all {
+    position: relative;
+    
 }
 
 .screen {
@@ -35,6 +41,7 @@ body, html {
     background-attachment: fixed; /* 배경 이미지 고정 */
     background-position: center center; /* 기본 위치 */
     transition: background-position 0.3s ease; /* 배경 이동 효과 */
+    z-index: 1;
 }
 
 .simple-introduce-box {
@@ -125,6 +132,6 @@ body, html {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 1225px;
     z-index: 0; /* 캔버스가 가장 아래에 표시되도록 설정 */
 }
