--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -14,7 +14,7 @@
   width: 100%;
   min-width: 768px;
   box-sizing: border-box;
-  z-index: 2;
+  z-index: 3;
   position: fixed;
 }
 
@@ -87,8 +87,8 @@ footer {
   min-width: 768px;
   box-sizing: border-box;
   height: 220px;
-  /* z-index: 2; */
-  /* position: relative; */
+  z-index: 2;
+  position: relative;
 }
 
 @media screen and (min-width: 768px) {
