--- a/src/assets/styles/board/Announcements/Ann_PostList.scss
+++ b/src/assets/styles/board/Announcements/Ann_PostList.scss
@@ -1,20 +1,115 @@
 .ann_postlist_wrap{
-  h1 {
-    font-size: 40px;
+  .ann-post-list-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    div {
+      display: flex;
+      border: 2px solid #775A45;
+      border-radius: 50px;
+      background-color: #FFF6ED;
+      input {
+        width: 260px;
+        height: 45px;
+        background-color: #FFF6ED;
+        border-radius: 50px 0px 0px 50px;
+        padding: 10px 10px 10px 20px;
+        font-weight: 600;
+      }
+      button {
+        margin-left: 5px;
+        background-color: #FFF6ED;
+        border-radius: 0px 50px 50px 0px;
+        padding-right: 5px;
+      }
+    }
+    h1 {
+      font-family: 'HSBombaram3.0_Thin', sans-serif;
+      font-size: 40px;
+      margin-bottom: 10px;
+      color: #775A45;
+    }
   }
   .ann-post-list {
+    font-family: 'HSBombaram3.0_Thin', sans-serif;
+    font-size: 24px;
     width: 100%;
-    border: 1px solid black;
     border-collapse: collapse;
-    list-style-type: none;
+    text-align: center;
+    thead {
+      background-color: #775A45;
+      color: white;
+      tr {
+        th {
+          border: 1px solid white;
+        }
+      }
+    }
+    tbody {
+      tr {
+        border-bottom: 1px solid #775A45;
+        font-size: 16px;
+      }
+    }
   }
-}
-.post-list th, .post-list td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
+  
 
-.post-list th {
-  background-color: #f2f2f2;
+
+
+  .pagenation-writebtn-box {
+    display: flexbox;
+    text-align: center;
+    .pagination {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 20px 0;
+      
+      .pagination-button {
+        background-color: #fff;
+        border: 1px solid #ddd;
+        color: #333;
+        padding: 8px 12px;
+        margin: 0 4px;
+        cursor: pointer;
+        transition: background-color 0.3s, color 0.3s;
+      }
+      
+      .pagination-button:hover {
+        background-color: #FF994F;
+      }
+      
+      .pagination-button.active {
+        background-color: #007bff;
+        color: #fff;
+        border-color: #007bff;
+      }
+      
+      .pagination-button:first-child,
+      .pagination-button:last-child {
+        background-color: #f8f9fa;
+      }
+      
+      .pagination-button:disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
+      }
+    }
+    .write-btn {
+      display: flex;
+      justify-content: flex-end;  /* 내용을 오른쪽 끝에 배치 */
+      a {
+        width: 90px;
+        height: 40px;
+        color: white;
+        background-color: #775A45;
+        align-content: center;
+        border-radius: 50px;
+      }
+    }
+    
+  }
+
+
+
 }
