--- a/src/assets/styles/chatbot/ChatMessage.css
+++ b/src/assets/styles/chatbot/ChatMessage.css
@@ -3,6 +3,25 @@
   flex: 1;
   overflow-y: auto;
   padding: 0px 16px 0px 16px;
+  scrollbar-width: thin;
+  scrollbar-color: #775A45 #ece8de;
+  background-color: #fffaf0;
+}
+
+/*----스크롤--*/
+.messages::-webkit-scrollbar {
+  width: 12px;
+}
+
+.messages::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 20px;
+}
+
+.messages::-webkit-scrollbar-thumb {
+  background-color: #775A45;
+  border-radius: 50px;
+  border: 3px solid #f0f0f0;
 }
     
 .message {
@@ -20,14 +39,15 @@
   
 .message.user {
   text-align: end;
-  position:relative; 
+  position: relative; 
   margin: 20px; 
   padding: 20px; 
   border-radius: 20px; 
   background-color: #F5DEB3;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);  /* 그림자 효과 추가 */
 }
-.message.user:after {
-  content:""; 
+.message.user:after { 
+  content: ""; 
   position: absolute; 
   top: 0px; 
   right: -15px; 
@@ -48,20 +68,16 @@
 
 .message-icon {
   width: 50px;
-  height: 50px;
-  border: 1px solid black;
+  height: 50px; 
   border-radius: 50%;
   margin: 0 10px;
-  background-color: #775A45;
 }
 
 .user-icon, .bot-icon {
   width: 50px;
   height: 50px;
-  border: 1px solid black;
   border-radius: 50%;
   margin: 0 10px;
-  background-color: #775A45;
 }
 
 
@@ -77,6 +93,7 @@
   padding: 20px; 
   border-radius: 20px; 
   background-color: #FFA500;
+  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.1);  /* 그림자 효과 추가 */
 }
 
 .message.bot:after {
