--- a/src/assets/styles/chatbot/ChatWindow.css
+++ b/src/assets/styles/chatbot/ChatWindow.css
@@ -1,11 +1,12 @@
 .chat-window {
     flex: 1;
+    height: 100%;
     display: flex;
     flex-direction: column;
     padding: 1rem;
     border: 1px solid #554235;
     border-radius: 10px;
-    background-color: white;
+    background-color: #fffaf0;
     padding: 16px 0px 16px 0px;
 }
 .wrap-form-box{
@@ -31,15 +32,13 @@
 }
 
 .send-btn {
-    width: 42px;
+    width: 52px;
     height: 42px;
-    border: 1px solid black;
-    border-radius: 100%;
+    border-radius: 40%;
     background-color: #FF994F;
     color: black;
-    border: none;
     cursor: pointer;
-    padding-left: 7px;
+    padding-left: 12px;
     margin-left: 15px;
 }
 .upload-box{
@@ -47,8 +46,8 @@
     
 }
 .window-upload-icon, .window-send-icon {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
 }
 .custom-file-upload {
     background-color: #775A45;
@@ -60,5 +59,5 @@
     border: 1px solid #775A45;
     border-radius: 100%;
     margin-right: 15px;
-    padding-left: 5px;
+    padding-left: 8px;
 }
