--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -10,12 +10,51 @@
   background-color: white;
   display: flex;
   justify-content: space-between;
-  margin: 0px auto;
+  align-items: center;
+  padding: 10px 50px;
   width: 100%;
-  min-width: 768px;
   box-sizing: border-box;
   z-index: 3;
   position: fixed;
+}
+
+.header-content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1px solid #775A45;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-logo {
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+}
+
+
+.logo {
+  width: 280px;
+  /* height: 50px; */
+  color: #775A45;
+  font-size: 64px;
+  font-weight: 500;
+  font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Regular', sans-serif;
+}
+
+header nav {
+  display: flex;
+  align-items: center;
+}
+
+.sign_up, .sign_in, .my_page, .sign_out {
+  font-size: 16px;
+  padding: 8px 20px;
+  margin: 0 5px;
 }
 
 @media screen and (min-width: 768px) {
@@ -32,14 +71,7 @@
   border-bottom: 1px solid #775A45;
 }
 
-.logo {
-  width: 280px;
-  /* height: 50px; */
-  color: #775A45;
-  font-size: 64px;
-  font-weight: 500;
-  font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Regular', sans-serif;
-}
+
 
 header h1 {
   font-size: 64px;
@@ -56,8 +88,8 @@ header nav {
   display: inline-block;
   text-align: center;
   align-content: center;
-  width: 200px;
-  height: 70px;
+  width: 100px;
+  height: 50px;
   border: 1px solid #775A45;
   border-radius: 50px;
   margin: 0px 10px 0px 10px;
@@ -70,7 +102,7 @@ header nav {
   display: inline-block;
   text-align: center;
   align-content: center;
-  width: 200px;
+  width: 100px;
   height: 70px;
   color: #775A45;
   margin: 0px 10px 0px 10px;
