--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -8,7 +8,7 @@
 /* header */
 .nagnae_header {
   background-color: white;
-  display: flex;
+  display: flexbox;
   justify-content: space-between;
   align-items: center;
   padding: 10px 50px;
@@ -107,6 +107,52 @@ header nav {
   color: #775A45;
   margin: 0px 10px 0px 10px;
 }
+
+.header-nav-link {
+  position: absolute;
+  top: 100%;
+  left: 50px;  // 왼쪽 마진 50px
+  right: 50px; // 오른쪽 마진 50px
+  width: calc(100% - 100px); // 전체 너비에서 좌우 마진 합 100px를 뺌
+  background-color: #f8f8f8;
+  padding: 10px 0; // 좌우 패딩은 제거하고 상하 패딩만 유지
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
+  display: flex;
+  justify-content: space-around;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background-color: #775A45;
+  }
+
+  &.show {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  a {
+    text-decoration: none;
+    color: #775A45;
+    padding: 5px 10px;
+    font-family: 'HSBombaram3.0_Vertical_Thin', sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+
+    &:hover {
+      background-color: #BA9F8B;
+      border-radius: 20px;
+    }
+  }
+}
+
 
 /* header/ */
 
