--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -111,11 +111,10 @@ header nav {
 .header-nav-link {
   position: absolute;
   top: 100%;
-  left: 50px;  // 왼쪽 마진 50px
-  right: 50px; // 오른쪽 마진 50px
-  width: calc(100% - 100px); // 전체 너비에서 좌우 마진 합 100px를 뺌
+  left: 0;
+  width: 100%;
   background-color: #f8f8f8;
-  padding: 10px 0; // 좌우 패딩은 제거하고 상하 패딩만 유지
+  padding: 10px 0;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   opacity: 0;
   visibility: hidden;
@@ -127,8 +126,8 @@ header nav {
     content: '';
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
+    left: 50px;  // 밑줄 시작 위치
+    right: 50px; // 밑줄 끝 위치
     height: 1px;
     background-color: #775A45;
   }
