--- a/src/assets/styles/login/_signIn.scss
+++ b/src/assets/styles/login/_signIn.scss
@@ -1,98 +1,21 @@
 .login-container {
-    font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Regular', sans-serif;
-    align-content: center;
-    background-color: #b39a87;
-    border-radius: 100px;
-    padding: 0px 100px 30px 100px;
-    width: 300px;
-    margin: 150px auto;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    width: 600px;
-    height: 500px;
-}
-// .login-form {
-
-// }
-
-.login-title {
-    font-size: 64px;
-    color: white;
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: 700;
-}
-
-.input-group {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-    border-radius: 100px;
-}
-.input-group label{
     display: flex;
     justify-content: center;
-    width: 60px;
     align-items: center;
-    border-radius: 100px 0px 0px 100px;
-    background-color: #FFF6ED;
-    height: 50px;
-}
-
-.input-group label img{
-    width: 27px;
-    height: 27px;
-}
-
-.login-id-input {
-    width: 100%;
-    height: 50px;
-    font-size: 24px;
-    padding: 10px;
-    border: none;
-    border-radius: 0px 50px 50px 0px;
-    background-color: #FFF6ED;
-}
-.login-pw-input {
-    width: 100%;
-    height: 50px;
-    font-size: 24px;
-    padding: 10px;
-    border: none;
-    border-radius: 0px 50px 50px 0px;
-    background-color: #FFF6ED;
-}
-
-.login-button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 50px;
-    background-color: #775A45;
-    color: white;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 32px;
-}
-
-.options {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 15px;
-    font-size: 12px;
-}
-
-.signup-button {
-    width: 130px;
-    height: 40px;
+    height: 100vh;
+    background-color: #f0f2f5;
+  }
+  
+  .login-form {
+    width: 300px;
+    padding: 20px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .login-title {
     text-align: center;
-    background-color: #FFF6ED;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 20px;
-    color: #775A45;
-    font-weight: 600;
-}
+    margin-bottom: 24px;
+  }
+  
